# binaural_audio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.sh
SDKs/: CMakeLists.txt
include/: tinywav.h
include/binauralplayer/: PluginProcessor.h  binauralplayer.h
src/: main.cpp
src/binauralplayer/: PluginProcessor.cpp  binauralplayer.cpp
src/tinywav/: tinywav.c
